--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <title>Taskify</title>
     </head>
 
-    <body>
+    <body onload="loadInitialTaskCards()">
         <!-- Modal -->
         <div
             class="modal fade"
@@ -107,7 +107,7 @@
                             type="button"
                             class="btn btn-primary"
                             onclick="saveChanges()"
-                            data-bs-dismiss="modal"
+                            data-bs-dismiss="modal" 
                         >
                             Save changes
                         </button>
