added delete button functionality

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <!-- Cards -->
             <section class="mb-3">
                 <div class="row task-container">
-                    <div class="col-md-6 col-lg-4">
+                    <!-- <div class="col-md-6 col-lg-4">
                         <div class="card">
                             <div
                                 class="
@@ -234,7 +234,7 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </section>
         </div>
