--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                             Add New Task
                         </h5>
                         <button
-                            type="button"
+                            type="button "
                             class="btn-close"
                             data-bs-dismiss="modal"
                             aria-label="Close"
-                        ></button>
+                            ></button>
                     </div>
                     <div class="modal-body">
                         <div class="mb-3">
@@ -107,7 +107,7 @@
                             type="button"
                             class="btn btn-primary"
                             onclick="saveChanges()"
-                            data-bs-dismiss="modal" 
+                            data-bs-dismiss="modal"
                         >
                             Save changes
                         </button>
@@ -234,7 +234,7 @@
                                 </button>
                             </div>
                         </div>
-                    </div> -->
+                    </div> gotcha! -->
                 </div>
             </section>
         </div>
