--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <!-- Google Font -->
+        <!-- Google Fonts  -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap"
             rel="stylesheet"
         />
 
-        <!-- Bootstrap CSS -->
+        <!-- Bootstrap CSS  -->
         <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
-            integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous"
         />
 
@@ -27,7 +27,9 @@
         <title>Taskify</title>
     </head>
 
-    <body onload="loadInitialTaskCards()">
+    <body>
+        <!-- . -->
+
         <!-- Modal -->
         <div
             class="modal fade"
@@ -40,58 +42,58 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">
-                            Add New Task
+                            Modal title
                         </h5>
                         <button
-                            type="button "
+                            type="button"
                             class="btn-close"
                             data-bs-dismiss="modal"
                             aria-label="Close"
-                            ></button>
+                        ></button>
                     </div>
                     <div class="modal-body">
                         <div class="mb-3">
-                            <label for="imageUrl" class="form-label"
+                            <label for="imageurl" class="form-label"
                                 >Image Url</label
                             >
                             <input
                                 type="url"
                                 class="form-control"
-                                id="imageUrl"
-                                placeholder="https://images.hello.com/hello.jpg"
+                                id="imageurl"
+                                placeholder="http://example.com/image.png"
                             />
                         </div>
                         <div class="mb-3">
-                            <label for="taskTitle" class="form-label"
+                            <label for="tasktitle" class="form-label"
                                 >Task Title</label
                             >
                             <input
                                 type="text"
                                 class="form-control"
-                                id="taskTitle"
-                                placeholder="API Integration"
+                                id="tasktitle"
+                                placeholder="DOM Manipulation"
                             />
                         </div>
                         <div class="mb-3">
-                            <label for="taskType" class="form-label"
+                            <label for="tasktype" class="form-label"
                                 >Task Type</label
                             >
                             <input
                                 type="text"
                                 class="form-control"
-                                id="taskType"
-                                placeholder="Development"
+                                id="tasktype"
+                                placeholder="Project"
                             />
                         </div>
                         <div class="mb-3">
-                            <label for="taskDescription" class="form-label"
+                            <label for="taskdescription" class="form-label"
                                 >Task Description</label
                             >
                             <textarea
                                 rows="5"
                                 class="form-control"
-                                id="taskDescription"
-                                placeholder="Building an amazing API!"
+                                id="taskdescription"
+                                placeholder="Describe the task here..."
                             ></textarea>
                         </div>
                     </div>
@@ -103,12 +105,7 @@
                         >
                             Close
                         </button>
-                        <button
-                            type="button"
-                            class="btn btn-primary"
-                            onclick="saveChanges()"
-                            data-bs-dismiss="modal"
-                        >
+                        <button type="button" class="btn btn-primary" onclick="saveChanges()">
                             Save changes
                         </button>
                     </div>
@@ -116,15 +113,16 @@
             </div>
         </div>
 
-        <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-            <div class="container-fluid">
-                <h1 class="navbar-brand fw-bold">
-                    <a class="text-decoration-none" href="#">Taskify</a>
-                </h1>
+        <!-- . -->
 
+        <!-- Navbar  -->
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <div class="navbar-brand container-fluid">
+                <a class="text-decoration-none fw-bold px-3" href="#"
+                    >TaskifY</a
+                >
                 <button
-                    class="navbar-toggler"
+                    class="navbar-toggler bg-primary"
                     type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent"
@@ -139,7 +137,7 @@
                     id="navbarSupportedContent"
                 >
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
+                        <li class="nav-item ms-2">
                             <a
                                 class="nav-link active"
                                 aria-current="page"
@@ -148,95 +146,78 @@
                             >
                         </li>
                     </ul>
-                    <!-- Navbar button  -->
                     <button
                         type="button"
                         class="btn btn-primary"
                         data-bs-toggle="modal"
                         data-bs-target="#exampleModal"
                     >
-                        <i class="fas fa-plus"></i> Add New
+                        <i class="fas fa-plus"></i> Add Task
                     </button>
                 </div>
             </div>
         </nav>
 
-        <!-- Search bar -->
+        <!-- Search Bar  -->
         <div class="container">
-            <section class="mt-5">
-                <div class="row justify-content-center">
-                    <div class="col-md-6">
-                        <div class="input-group mb-3 shadow">
-                            <input
-                                type="text"
-                                class="form-control"
-                                placeholder="Search Task"
-                                aria-label="Search Task"
-                                aria-describedby="basic-addon2"
-                            />
-                            <span class="input-group-text" id="basic-addon2">
-                                <i class="fas fa-search"></i>
-                            </span>
-                        </div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-8">
+                    <div class="input-group mb-3 mt-3">
+                        <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Search"
+                            aria-label="Search"
+                            aria-describedby="basic-addon2"
+                        />
+                        <span class="input-group-text" id="basic-addon2"
+                            ><i class="fas fa-search"></i
+                        ></span>
                     </div>
                 </div>
-            </section>
+            </div>
+        </div>
 
-            <!-- Cards -->
-            <section class="mb-3">
-                <div class="row task-container">
-                    <!-- <div class="col-md-6 col-lg-4">
-                        <div class="card">
-                            <div
-                                class="
-                                    card-header
-                                    d-flex
-                                    justify-content-end
-                                    gap-2
-                                "
+        <!-- Task Cards  -->
+        <div class="container mb-2">
+            <div class="row task-container">
+                <!-- <div class="col-md-6 col-lg-4">
+                    <div class="card">
+                        <div
+                            class="card-header d-flex justify-content-end gap-2"
+                        >
+                            <button
+                                type="button"
+                                class="btn btn-outline-success"
                             >
-                                <button
-                                    type="button"
-                                    class="btn btn-outline-success"
-                                >
-                                    <i class="fas fa-pencil-alt"></i>
-                                </button>
-                                <button
-                                    type="button"
-                                    class="btn btn-outline-danger"
-                                >
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                            </div>
-                            <img
-                                src="https://images.unsplash.com/photo-1624220684521-b4de9fbff4a7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
-                                class="card-img-top"
-                                alt="..."
-                            />
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    Special title treatment
-                                </h5>
-                                <p class="card-text">
-                                    With supporting text below as a natural
-                                    lead-in to additional content.
-                                </p>
-                                <span class="badge bg-primary p-2"
-                                    >Amazing</span
-                                >
-                            </div>
-                            <div class="card-footer text-muted">
-                                <button
-                                    type="button"
-                                    class="btn btn-outline-primary float-end"
-                                >
-                                    Open Task
-                                </button>
-                            </div>
+                                <i class="fas fa-edit"></i>
+                            </button>
+                            <button
+                                type="button"
+                                class="btn btn-outline-danger"
+                            >
+                                <i class="fas fa-trash"></i>
+                            </button>
                         </div>
-                    </div> gotcha! -->
-                </div>
-            </section>
+                        <div class="card-body">
+                            <img
+                            src="https://picsum.photos/536/354"
+                                class="card-img-top rounded mb-2"
+                                alt="card image"
+                            />
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">
+                                With supporting text below as a natural lead-in
+                                to additional content.
+                            </p>
+                            <span class="badge bg-primary">Amazing!</span>
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button" class="btn btn-outline-primary float-end">Open Task</button>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
         </div>
 
         <!-- Fontawesome Icons -->
@@ -245,14 +226,14 @@
             crossorigin="anonymous"
         ></script>
 
+        <!-- My JS  -->
+        <script src="script.js"></script>
+
         <!-- JavaScript Bundle with Popper -->
         <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"
         ></script>
-
-        <!-- My JS -->
-        <script src="script.js"></script>
     </body>
 </html>
