--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <title>Taskify</title>
     </head>
 
-    <body>
+    <body onload="reloadTaskCards()">
         <!-- . -->
 
         <!-- Modal -->
@@ -105,7 +105,12 @@
                         >
                             Close
                         </button>
-                        <button type="button" class="btn btn-primary" onclick="saveChanges()">
+                        <button
+                            type="button"
+                            class="btn btn-primary"
+                            onclick="saveChanges()"
+                            data-bs-dismiss="modal"
+                        >
                             Save changes
                         </button>
                     </div>
