--- a/index.html
+++ b/index.html
@@ -24,6 +24,48 @@
 </head>
 
 <body>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">
+                        Add New Task
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="imageurl" class="form-label">Image Url</label>
+                        <input type="url" class="form-control" id="imageurl"
+                            placeholder="http://example.com/image.jpg" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="tasktitle" class="form-label">Task Title</label>
+                        <input type="text" class="form-control" id="tasktitle" placeholder="Laundry" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="tasktype" class="form-label">Task Type</label>
+                        <input type="text" class="form-control" id="tasktype" placeholder="Chores" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="taskdescription" class="form-label">Task Description</label>
+                        <textarea rows="5" class="form-control" id="taskdescription"
+                            placeholder="Getting the clothes..."></textarea>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Close
+                    </button>
+                    <button type="button" class="btn btn-primary" onclick="saveChanges()">
+                        Save changes
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light p-1 shadow-sm">
         <div class="container-fluid d-flex align-items-start">
@@ -36,10 +78,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item ms-2">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home
+                        </a>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                    data-bs-toggle="modal" data-bs-target="#exampleModal">
                     <i class="fas fa-plus"></i> Add Task
                 </button>
             </div>
@@ -47,9 +91,7 @@
     </nav>
 
     <div class="container">
-        <!--
-                 Search bar  
-            -->
+        <!-- Search bar  -->
         <section class="mt-4">
             <div class="row justify-content-center">
                 <div class="col-md-8">
@@ -64,20 +106,12 @@
             </div>
         </section>
 
-        <!-- 
-                Task cards
-            -->
+        <!-- Task cards -->
         <section>
-            <div class="row mb-2">
+            <div class="row mb-2 task-container">
                 <div class="col-md-6 col-lg-4">
                     <div class="card">
-                        <div class="
-                                    card-header
-                                    d-flex
-                                    justify-content-end
-                                    gap-2
-                                    m-0
-                                ">
+                        <div class=" card-header d-flex justify-content-end gap-2 m-0">
                             <button type="button" class="btn btn-outline-success">
                                 <i class="fas fa-pencil-alt"></i>
                             </button>
@@ -94,10 +128,7 @@
                             <span class="badge bg-primary">Amazing!</span>
                         </div>
                         <div class="card-footer text-muted">
-                            <button type="button" class="
-                                        btn btn-outline-primary
-                                        float-end
-                                    ">
+                            <button type="button" class="btn btn-outline-primary float-end">
                                 Open Task
                             </button>
                         </div>
