--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body onload="reloadTaskCards()">
+
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -65,6 +66,42 @@
             </div>
         </div>
     </div>
+
+    <!-- Open Task Modal 
+    <div class="modal" id="openModal" tabindex="-3" style="display: none;" aria-hidden="true">
+        <div class="modal-dialog ">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Task View</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                    <div class="card shadow-sm task__card ">
+
+                        <div class="card-body">
+                            <img src=${imageUrl} alt="Card image cap" id="openImage" class="card-img-top rounded"
+                                width="height=200rem">
+
+                            <h1 class="task__card__title" id="openTitle">
+                                ${taskTitle}
+                            </h1>
+                            <p class="description trim-3-lines font-large " id="openDesc">
+                                ${taskDescription}
+                            </p>
+                            <div class="tags text-white d-flex flex-wrap">
+                                <h3>
+                                    <span class="badge h1 bg-primary m-1" id="openType">
+                                        ${taskType}
+                                    </span>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
 
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light p-1 shadow-sm">
