just pulling my dick

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- My CSS  -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>Taskify</title>
+    <title>Tasky</title>
 </head>
 
 <body onload="reloadTaskCards()">
