--- a/index.html
+++ b/index.html
@@ -171,15 +171,10 @@
           class="
             collapse
             navbar-collapse
-            d-flex
-            flex-column
-            justify-content-sm-center
-            flex-lg-row
-            justify-content-lg-between
           "
           id="navbarSupportedContent"
         >
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto mx-lg-0">
+          <ul class="navbar-nav me-auto my-2 mb-lg-0 mx-auto mx-lg-0">
             <li class="nav-item ms-2">
               <a class="nav-link active" aria-current="page" href="#">Home </a>
             </li>
